Prep KOST-Val 2.x
=================
- tiff
- pdf/a
- siard
- JavaFX Gui (Prototyp)
- bug-fix
- del old GUI